--- a/static/global.scss
+++ b/static/global.scss
@@ -11,3 +11,13 @@ body{
     padding:10px;
   }
 }
+.flex{
+  @media only screen and (max-width:600px){
+    display: flex;
+    flex-direction: column;
+  }
+  @media only screen and (min-width:600px){
+    display: flex;
+    flex-direction: row;
+  }
+}
