--- a/static/global.scss
+++ b/static/global.scss
@@ -3,6 +3,14 @@ body{
   padding:0;
   font-family: 'Roboto', sans-serif;
 }
+// Fonts
+.fnt-warning{
+  color:yellow;
+}
+.fnt-error{
+  color:red;
+}
+
 .spacer{
   margin-top: 100px;
 }
